--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"main": "index.tsx",
 	"license": "MIT",
+	"type": "commonjs",
 	"devDependencies": {
 		"@babel/preset-env": "^7.26.8",
 		"@babel/preset-react": "^7.26.3",
@@ -37,6 +38,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"framer-motion": "^12.5.0",
 		"html-webpack-plugin": "^5.5.1",
 		"husky": "^8.0.3",
 		"identity-obj-proxy": "^3.0.0",
@@ -75,7 +77,8 @@
 		"prepare": "husky install",
 		"commit": "npm run check && cz",
 		"test": "jest",
-		"cypress": "cypress open"
+		"cypress": "cypress open",
+		"generate:component": "node scripts/generateComponent.js"
 	},
 	"dependencies": {
 		"@reduxjs/toolkit": "^2.5.1",
