--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
 	"name": "react-webpack-starter",
+	"homehape": "https://github.com/IlyaKotovskiy/react-burger",
 	"version": "1.0.0",
 	"main": "index.tsx",
 	"license": "MIT",
 	"type": "commonjs",
 	"devDependencies": {
+		"@4tw/cypress-drag-drop": "^2.3.0",
 		"@babel/preset-env": "^7.26.8",
 		"@babel/preset-react": "^7.26.3",
 		"@babel/preset-typescript": "^7.26.0",
@@ -14,6 +16,8 @@
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.2.0",
 		"@testing-library/user-event": "^14.6.1",
+		"@types/cypress": "^1.1.6",
+		"@types/jest": "^30.0.0",
 		"@types/react": "^18.2.0",
 		"@types/react-dom": "^18.2.1",
 		"@types/react-redux": "^7.1.34",
@@ -32,6 +36,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-import-resolver-alias": "^1.1.2",
 		"eslint-import-resolver-typescript": "^3.7.0",
+		"eslint-plugin-cypress": "^5.1.0",
 		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-plugin-import": "^2.31.0",
 		"eslint-plugin-jsx-a11y": "^6.10.2",
@@ -39,6 +44,7 @@
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"framer-motion": "^12.5.0",
+		"gh-pages": "^6.3.0",
 		"html-webpack-plugin": "^5.5.1",
 		"husky": "^8.0.3",
 		"identity-obj-proxy": "^3.0.0",
@@ -82,7 +88,9 @@
 		"commit": "npm run check && cz",
 		"test": "jest",
 		"cypress": "cypress open",
-		"generate:component": "node scripts/generateComponent.js"
+		"generate:component": "node scripts/generateComponent.js",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
 	},
 	"dependencies": {
 		"@ya.praktikum/react-developer-burger-ui-components": "^1.14.2",
