--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "react-webpack-starter",
-	"homehape": "https://github.com/IlyaKotovskiy/react-burger",
+	"homepage": "https://github.com/IlyaKotovskiy/react-burger",
 	"version": "1.0.0",
 	"main": "index.tsx",
 	"license": "MIT",
@@ -112,6 +112,5 @@
 			"path": "./node_modules/cz-conventional-changelog"
 		}
 	},
-	"homepage": "./",
 	"packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
