--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@testing-library/user-event": "^14.6.1",
 		"@types/cypress": "^1.1.6",
 		"@types/jest": "^30.0.0",
+		"@types/node": "^24.0.13",
 		"@types/react": "^18.2.0",
 		"@types/react-dom": "^18.2.1",
 		"@types/react-redux": "^7.1.34",
@@ -42,6 +43,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"fetch-mock": "^12.5.3",
 		"framer-motion": "^12.5.0",
 		"gh-pages": "^6.3.0",
 		"html-webpack-plugin": "^5.5.1",
@@ -57,6 +59,7 @@
 		"react-dnd": "^16.0.1",
 		"react-dnd-html5-backend": "^16.0.1",
 		"react-refresh": "^0.14.0",
+		"redux-mock-store": "^1.5.5",
 		"redux-thunk": "^3.1.0",
 		"sass": "^1.69.7",
 		"sass-loader": "^13.3.3",
